--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prisma": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^2.13.0",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
