--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,22 +3,23 @@
 client_id = "9cfd56536d8d2e89ca61c351d6dc97db"
 name = "sherpa-dev"
 handle = "sherpa-dev-1"
-application_url = "https://reflect-moss-sheets-sg.trycloudflare.com"
+application_url = "https://du-export-tion-high.trycloudflare.com"
 embedded = true
 
 [build]
 automatically_update_urls_on_dev = true
 dev_store_url = "dummy-store-usa.myshopify.com"
+include_config_on_deploy = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = ""
+scopes = "read_customers,read_orders,read_products,write_customers,write_discounts,write_orders"
 
 [auth]
 redirect_urls = [
-  "https://reflect-moss-sheets-sg.trycloudflare.com/auth/callback",
-  "https://reflect-moss-sheets-sg.trycloudflare.com/auth/shopify/callback",
-  "https://reflect-moss-sheets-sg.trycloudflare.com/api/auth/callback"
+  "https://du-export-tion-high.trycloudflare.com/auth/callback",
+  "https://du-export-tion-high.trycloudflare.com/auth/shopify/callback",
+  "https://du-export-tion-high.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
