--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,7 +3,7 @@
 client_id = "9cfd56536d8d2e89ca61c351d6dc97db"
 name = "sherpa-dev"
 handle = "sherpa-dev-1"
-application_url = "https://du-export-tion-high.trycloudflare.com"
+application_url = "https://chassis-raising-drops-obtain.trycloudflare.com"
 embedded = true
 
 [build]
@@ -17,9 +17,9 @@ scopes = "read_customers,read_orders,read_products,write_customers,write_discoun
 
 [auth]
 redirect_urls = [
-  "https://du-export-tion-high.trycloudflare.com/auth/callback",
-  "https://du-export-tion-high.trycloudflare.com/auth/shopify/callback",
-  "https://du-export-tion-high.trycloudflare.com/api/auth/callback"
+  "https://chassis-raising-drops-obtain.trycloudflare.com/auth/callback",
+  "https://chassis-raising-drops-obtain.trycloudflare.com/auth/shopify/callback",
+  "https://chassis-raising-drops-obtain.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
