--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@shopify/shopify-app-remix": "^3.3.2",
     "@shopify/shopify-app-session-storage-prisma": "^5.0.2",
     "isbot": "^5.1.0",
+    "marked": "^14.1.3",
     "prisma": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
