--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-app-remix": "^3.3.2",
     "@shopify/shopify-app-session-storage-prisma": "^5.0.2",
+    "algoliasearch": "^5.8.1",
+    "firebase": "^10.14.0",
     "isbot": "^5.1.0",
     "marked": "^14.1.3",
     "prisma": "^5.11.0",
