--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,7 +3,7 @@
 client_id = "9cfd56536d8d2e89ca61c351d6dc97db"
 name = "sherpa-dev"
 handle = "sherpa-dev-1"
-application_url = "https://symposium-stops-rider-pe.trycloudflare.com"
+application_url = "https://rainbow-explicit-conservation-laugh.trycloudflare.com"
 embedded = true
 
 [build]
@@ -13,13 +13,13 @@ include_config_on_deploy = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "read_customers,read_orders,read_products,write_customers,write_discounts,write_orders"
+scopes = "read_customers,read_orders,read_products,write_customers,write_discounts,write_order_edits,write_orders"
 
 [auth]
 redirect_urls = [
-  "https://symposium-stops-rider-pe.trycloudflare.com/auth/callback",
-  "https://symposium-stops-rider-pe.trycloudflare.com/auth/shopify/callback",
-  "https://symposium-stops-rider-pe.trycloudflare.com/api/auth/callback"
+  "https://rainbow-explicit-conservation-laugh.trycloudflare.com/auth/callback",
+  "https://rainbow-explicit-conservation-laugh.trycloudflare.com/auth/shopify/callback",
+  "https://rainbow-explicit-conservation-laugh.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
