--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,9 +1,9 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
-client_id = "9cfd56536d8d2e89ca61c351d6dc97db"
-name = "sherpa-dev"
-handle = "sherpa-dev-1"
-application_url = "https://daughter-disc-quote-eastern.trycloudflare.com"
+client_id = "58928b5d71d8f97ebd905e289c151269"
+name = "Sherpa"
+handle = "sherpa-chatbot-production"
+application_url = "https://sherpa-prod-8bafaab678a7.herokuapp.com"
 embedded = true
 
 [build]
@@ -17,33 +17,29 @@ scopes = "read_customers,read_orders,read_products,write_customers,write_discoun
 
 [auth]
 redirect_urls = [
-  "https://daughter-disc-quote-eastern.trycloudflare.com/auth/callback",
-  "https://daughter-disc-quote-eastern.trycloudflare.com/auth/shopify/callback",
-  "https://daughter-disc-quote-eastern.trycloudflare.com/api/auth/callback"
+  "https://sherpa-prod-8bafaab678a7.herokuapp.com/auth/callback",
+  "https://sherpa-prod-8bafaab678a7.herokuapp.com/auth/shopify/callback",
+  "https://sherpa-prod-8bafaab678a7.herokuapp.com/api/auth/callback"
 ]
 
 [webhooks]
-api_version = "2024-10"
+api_version = "2023-04"
 
   [[webhooks.subscriptions]]
-  uri = "/webhooks/customers/data_request"
-  compliance_topics = [ "customers/data_request" ]
-
-  [[webhooks.subscriptions]]
-  uri = "/webhooks/customers/redact"
+  uri = "https://us-central1-sherpa-dc1fe.cloudfunctions.net/gdpr/customer/redact"
   compliance_topics = [ "customers/redact" ]
 
   [[webhooks.subscriptions]]
-  uri = "/webhooks/shop/redact"
+  uri = "https://us-central1-sherpa-dc1fe.cloudfunctions.net/gdpr/customer/request"
+  compliance_topics = [ "customers/data_request" ]
+
+  [[webhooks.subscriptions]]
+  uri = "https://us-central1-sherpa-dc1fe.cloudfunctions.net/gdpr/store/redact"
   compliance_topics = [ "shop/redact" ]
 
   [[webhooks.subscriptions]]
   topics = [ "app_subscriptions/update" ]
   uri = "/webhooks/app/billing"
-
-  [[webhooks.subscriptions]]
-  topics = [ "app/uninstalled" ]
-  uri = "/webhooks/app/uninstalled"
 
 [pos]
 embedded = false
