--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -13,7 +13,7 @@ include_config_on_deploy = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "read_customers,read_orders,read_products,write_customers,write_discounts,write_order_edits,write_orders"
+scopes = "read_all_orders,read_customers,read_orders,read_products,write_customers,write_discounts,write_order_edits,write_orders"
 
 [auth]
 redirect_urls = [
